OMods/game/modding_Tools/hllib245/lib/HLLib.h


typedef unsigned char		hlBool;

typedef char				hlChar;

typedef signed int			hlInt;

typedef unsigned int		hlUInt;

typedef signed long long	hlLongLong;

typedef unsigned long long	hlULongLong;

typedef void				hlVoid;

typedef hlSingle		hlFloat;


typedef enum
{
	HL_SEEK_BEGINNING = 0,
	HL_SEEK_CURRENT,
	HL_SEEK_END
} HLSeekMode;


typedef enum
{
	HL_ITEM_NONE = 0,
	HL_ITEM_FOLDER,
	HL_ITEM_FILE
} HLDirectoryItemType;


typedef enum
{
	HL_ORDER_ASCENDING = 0,
	HL_ORDER_DESCENDING
} HLSortOrder;


typedef enum
{
	HL_FIELD_NAME = 0,
	HL_FIELD_SIZE
} HLSortField;


typedef enum
{
	HL_FIND_FILES = 0x01,
	HL_FIND_FOLDERS = 0x02,
	HL_FIND_NO_RECURSE = 0x04,
	HL_FIND_CASE_SENSITIVE = 0x08,
	HL_FIND_MODE_STRING = 0x10,
	HL_FIND_MODE_SUBSTRING = 0x20,
	HL_FIND_MODE_WILDCARD = 0x00,
	HL_FIND_ALL = HL_FIND_FILES | HL_FIND_FOLDERS
} HLFindType;


typedef enum
{
	HL_STREAM_NONE = 0,
	HL_STREAM_FILE,
	HL_STREAM_GCF,
	HL_STREAM_MAPPING,
	HL_STREAM_MEMORY,
	HL_STREAM_PROC,
	HL_STREAM_NULL
} HLStreamType;


typedef enum
{
	HL_ATTRIBUTE_INVALID = 0,
	HL_ATTRIBUTE_BOOLEAN,
	HL_ATTRIBUTE_INTEGER,
	HL_ATTRIBUTE_UNSIGNED_INTEGER,
	HL_ATTRIBUTE_FLOAT,
	HL_ATTRIBUTE_STRING
} HLAttributeType;


typedef enum
{
	HL_VALIDATES_OK = 0,
	HL_VALIDATES_ASSUMED_OK,
	HL_VALIDATES_INCOMPLETE,
	HL_VALIDATES_CORRUPT,
	HL_VALIDATES_CANCELED,
	HL_VALIDATES_ERROR
} HLValidation;


typedef struct
{
	HLAttributeType eAttributeType;
	hlChar lpName[252];
	union
	{
		struct
		{
			hlBool bValue;
		} Boolean;
		struct
		{
			hlInt iValue;
		} Integer;
		struct
		{
			hlUInt uiValue;
			hlBool bHexadecimal;
		} UnsignedInteger;
		struct
		{
			hlFloat fValue;
		} Float;
		struct
		{
			hlChar lpValue[256];
		} String;
	} Value;
} HLAttribute;


typedef hlVoid HLDirectoryItem;

typedef hlVoid HLStream;


HLLIB_API hlUInt hlAttributeGetUnsignedInteger(HLAttribute *pAttribute);

HLLIB_API hlVoid hlAttributeSetUnsignedInteger(HLAttribute *pAttribute, const hlChar *lpName, hlUInt uiValue, hlBool bHexadecimal);


HLLIB_API hlFloat hlAttributeGetFloat(HLAttribute *pAttribute);

HLLIB_API hlVoid hlAttributeSetFloat(HLAttribute *pAttribute, const hlChar *lpName, hlFloat fValue);


HLLIB_API const hlChar *hlAttributeGetString(HLAttribute *pAttribute);

HLLIB_API hlVoid hlAttributeSetString(HLAttribute *pAttribute, const hlChar *lpName, const hlChar *lpValue);


//
// Directory Item
//

HLLIB_API HLDirectoryItemType hlItemGetType(const HLDirectoryItem *pItem);


HLLIB_API const hlChar *hlItemGetName(const HLDirectoryItem *pItem);

HLLIB_API hlUInt hlItemGetID(const HLDirectoryItem *pItem);

HLLIB_API const hlVoid *hlItemGetData(const HLDirectoryItem *pItem);


HLLIB_API hlUInt hlItemGetPackage(const HLDirectoryItem *pItem);

HLLIB_API HLDirectoryItem *hlItemGetParent(HLDirectoryItem *pItem);


HLLIB_API hlBool hlItemGetSize(const HLDirectoryItem *pItem, hlUInt *pSize);

HLLIB_API hlBool hlItemGetSizeEx(const HLDirectoryItem *pItem, hlULongLong *pSize);

HLLIB_API hlBool hlItemGetSizeOnDisk(const HLDirectoryItem *pItem, hlUInt *pSize);

HLLIB_API hlBool hlItemGetSizeOnDiskEx(const HLDirectoryItem *pItem, hlULongLong *pSize);


HLLIB_API hlVoid hlItemGetPath(const HLDirectoryItem *pItem, hlChar *lpPath, hlUInt uiPathSize);

HLLIB_API hlBool hlItemExtract(HLDirectoryItem *pItem, const hlChar *lpPath);


//
// Directory Folder
//

HLLIB_API hlUInt hlFolderGetCount(const HLDirectoryItem *pItem);


HLLIB_API HLDirectoryItem *hlFolderGetItem(HLDirectoryItem *pItem, hlUInt uiIndex);

HLLIB_API HLDirectoryItem *hlFolderGetItemByName(HLDirectoryItem *pItem, const hlChar *lpName, HLFindType eFind);

HLLIB_API HLDirectoryItem *hlFolderGetItemByPath(HLDirectoryItem *pItem, const hlChar *lpPath, HLFindType eFind);


HLLIB_API hlVoid hlFolderSort(HLDirectoryItem *pItem, HLSortField eField, HLSortOrder eOrder, hlBool bRecurse);


HLLIB_API HLDirectoryItem *hlFolderFindFirst(HLDirectoryItem *pFolder, const hlChar *lpSearch, HLFindType eFind);

HLLIB_API HLDirectoryItem *hlFolderFindNext(HLDirectoryItem *pFolder, HLDirectoryItem *pItem, const hlChar *lpSearch, HLFindType eFind);


HLLIB_API hlUInt hlFolderGetSize(const HLDirectoryItem *pItem, hlBool bRecurse);

HLLIB_API hlULongLong hlFolderGetSizeEx(const HLDirectoryItem *pItem, hlBool bRecurse);

HLLIB_API hlUInt hlFolderGetSizeOnDisk(const HLDirectoryItem *pItem, hlBool bRecurse);

HLLIB_API hlULongLong hlFolderGetSizeOnDiskEx(const HLDirectoryItem *pItem, hlBool bRecurse);

HLLIB_API hlUInt hlFolderGetFolderCount(const HLDirectoryItem *pItem, hlBool bRecurse);

HLLIB_API hlUInt hlFolderGetFileCount(const HLDirectoryItem *pItem, hlBool bRecurse);


//
// Directory File
//

HLLIB_API hlUInt hlFileGetExtractable(const HLDirectoryItem *pItem);

HLLIB_API HLValidation hlFileGetValidation(const HLDirectoryItem *pItem);

HLLIB_API hlUInt hlFileGetSize(const HLDirectoryItem *pItem);

HLLIB_API hlUInt hlFileGetSizeOnDisk(const HLDirectoryItem *pItem);


HLLIB_API hlBool hlFileCreateStream(HLDirectoryItem *pItem, HLStream **pStream);

HLLIB_API hlVoid hlFileReleaseStream(HLDirectoryItem *pItem, HLStream *pStream);


//
// Stream
//

HLLIB_API HLStreamType hlStreamGetType(const HLStream *pStream);


HLLIB_API hlBool hlStreamGetOpened(const HLStream *pStream);

HLLIB_API hlUInt hlStreamGetMode(const HLStream *pStream);


HLLIB_API hlBool hlStreamOpen(HLStream *pStream, hlUInt uiMode);

HLLIB_API hlVoid hlStreamClose(HLStream *pStream);


HLLIB_API hlUInt hlStreamGetStreamSize(const HLStream *pStream);

HLLIB_API hlULongLong hlStreamGetStreamSizeEx(const HLStream *pStream);

HLLIB_API hlUInt hlStreamGetStreamPointer(const HLStream *pStream);

HLLIB_API hlULongLong hlStreamGetStreamPointerEx(const HLStream *pStream);


HLLIB_API hlUInt hlStreamSeek(HLStream *pStream, hlLongLong iOffset, HLSeekMode eSeekMode);

HLLIB_API hlULongLong hlStreamSeekEx(HLStream *pStream, hlLongLong iOffset, HLSeekMode eSeekMode);


HLLIB_API hlBool hlStreamReadChar(HLStream *pStream, hlChar *pChar);

HLLIB_API hlUInt hlStreamRead(HLStream *pStream, hlVoid *lpData, hlUInt uiBytes);


HLLIB_API hlBool hlStreamWriteChar(HLStream *pStream, hlChar iChar);

HLLIB_API hlUInt hlStreamWrite(HLStream *pStream, const hlVoid *lpData, hlUInt uiBytes);


//
// Package
//

HLLIB_API hlBool hlBindPackage(hlUInt uiPackage);